--- a/login.html
+++ b/login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Login Page</title>
     <link rel="stylesheet" type="text/css" href="login.css">
 </head>
 <body>
-	<h1 align="center">Login</h1>
+	<a href="index.html"><h1>返回主页面</h1></a>
 	<form id="login-form" action="login.php" method="POST">
-		<label for="username">Username:</label>
-		<input type="text" id="username-input" name="username"><br><br>
-
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password"><br><br>
-		<input type="submit" value="Login">
+		<p>Login</p>
+		<input type="text" id="username-input" name="username" placeholder="用户名" autofocus><br><br>
+		<input type="password" id="password" name="password" placeholder="密码"><br><br>
+		<input type="submit" value="登 录" class="btn">
 	</form>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
