--- a/register.html
+++ b/register.html
@@ -7,19 +7,13 @@
     <link rel="stylesheet" type="text/css" href="register.css">
 </head>
 <body>
-    <h1>register</h1>
-    <form action="register.php" method="post">
-        <label for="username">username:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <br>
-        <label for="password">password:</label>
-        <input type="password" id="password" name="password" required>
-        <br><br>
-        <label for="email">email:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-        <input type="email" id="email" name="email" required>
-        <br><br>
-        <input type="submit" value="注册">
+    <form action="register.php" method="post" id="register-form">
+        <p>register</p>
+        <input type="text" id="username" name="username" placeholder="用户名" required>
+        <input type="password" id="password" name="password" placeholder="密码" required>
+        <input type="email" id="email" name="email" placeholder="邮箱" required>
+        <input type="submit" value="注 册" class="btn">
     </form>
+    <a href="index.html"><h1>返回主页面</h1></a>
 </body>
 </html>
